--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -6,6 +6,7 @@
 					.home-box
 						.center-alignment
 							%h5 Welcome to DemPoints!
+							%h1= @comments.next_page
 							%br You can post interesting and useful points about companies & their intern/grad jobs here
 							%br 
 							=render 'layouts/like_button'		
