--- a/app/views/dashboards/dashboard.js.haml
+++ b/app/views/dashboards/dashboard.js.haml
@@ -3,3 +3,4 @@ $('.box-group').append('#{escape_javascript(render partial: "layouts/more_commen
 $('.next_page').attr('href', '?page=#{@comments.next_page}'); 
 - unless @comments.next_page
   $('.next_page').toggleClass('.end_load');	
+  $('.next_page').val('No More');	
