--- a/app/views/user_mailer/index.html
+++ b/app/views/user_mailer/index.html
@@ -36,7 +36,7 @@ h2{color:#fff;background:#0090ca;font-size:12pt;line-height:100%;margin:0 0 .5em
 
 	<h1> Welcome to ResQuery </h1>
 
-	<h3>Hi <%= @user.first_name %>,</h3>
+	<h3>Hi <%= @user.username %>,</h3>
 </p>
 
 <p style="text-align:justify">
