--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -34,7 +34,7 @@ h1{font-size:16pt;line-height:100%}
 <p style="text-align:justify">
 	<%= image_tag attachments['DemPointsLogo.png'].url%>
 	</br></br>
-	<h2>Hi <%= @user.first_name %>,</h2>
+	<h2>Hi <%= @user.username %>,</h2>
 </p>
 
 <p style="text-align:justify">
