--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,3 @@
-@import "bootstrap";
-
 
 /* ========= SECTION: STYLE VARIABLES =========*/
 
@@ -7,6 +5,7 @@
 $orange: #F18419;
 $dark-orange:#DB7817;
 
+$dempoints-blue:#215B7F;
 
 /* greys */
 $light-grey: #F2F2F2;
@@ -24,18 +23,15 @@ $light-green: #DBF2DE;
 
 
 $dark-red: #D41528;
-
+.row {min-width:100% !important;}
 
 /* ========= END SECTION: STYLE VARIABLES =========*/
 
 
 /* ========= SECTION: UNIVERSALS =========*/
 
-
-@media (min-width: 1200px) {
-  .span12, .container {
-    width: 1170px;
-  }
+.pad-top{
+	padding-top:40px;
 }
 
 a:hover{
@@ -44,84 +40,81 @@ a:hover{
 
 body {
 	font-family: 'Oxygen', sans-serif !important;
-	font-size:13px;
+	font-size:15px;
 	height:100%;
-	a{
-		color:$dark-grey;
-	}
 }
 
-textarea {
-	width:95%;
-	height:90px;
-	resize:none;
+h2{
+	font-family: 'Oxygen', sans-serif !important;
+	color:$dempoints-blue;
 }
-
-select {
-	width:95%;
-}
-
-input {
-	width:95%;
-}
-
 
 .hidden{
 	display:none;
-}
-
-.grey-text{
-	color: $text-grey;
 }
 
 .center-alignment {
 	text-align:center;
 }
 
-.red-text{
-	color:$dark-red !important;
-	a {
-		color:$dark-red;
-	}
-}
-
-.margin-top{
-	margin-top:60px;
-}
-
-.orange-text{
-	color:$orange;
-}
-
-.large-orange-text{
-	font-size:30px;
-	color:$orange;
-}
 
 
 /* ========= END SECTION: UNIVERSALS =========*/
 
+html {
+	overflow: hidden;
+}
 
+#sidebar { 
+	background-color:$dempoints-blue;
+	float: left;
+	left: 220px;
+	margin-left: -220px;
+	position: relative;
+	width: 220px;
+	overflow-y: auto;
+}
+
+#contentWrapper { 
+	float: left;
+	width: 100%;
+}
+
+#content {
+	margin-left:240px;
+	overflow-y: auto;
+}
+
+
+.bold{
+	font-weight:700;
+}
 
 .header{
-	background-color:$orange;
-	font-size:10px !important;
-	margin-bottom:40px;
+//	background-color:$dempoints-blue;
+	padding:15px 0px 0px 30px;
+	font-size:18px !important;
+	line-height:50px;
+
 	a{
-		color:white;
+		color:#9b9b9b;
 	}
-	
-	.btn{
-		margin:15px 0px 0px 10px;
-		font-size:10px;
-	}
-	
+	a:hover{
+		color:$dark-grey;
+	};
+
 }
 
 
-.grey-text{
-	color:$dark-grey;
+.logo{
+	padding:60px;
+	background-color:$dempoints-blue;
+	img{
+		width:97px;
+		height:29px;
+	}
 }
+
 
 .sign-in-button{
 	font-size:23px;
@@ -134,119 +127,7 @@ input {
 	color:white;
 }
 
-
-.home-logo{
-	margin-top:50px;
-	img {
-		height:55px;
-		width:204px;
-	}
-}
-
-.my-jobs-button{
-	height:40px;
-	font-size:11px;
-	text-align:center;
-	float:left;
-	padding:20px 20px 0px;
-}
-
-.my-jobs-button:hover{
-	background-color:$dark-orange;
-}
-
-.account-button{
-	height:40px;
-	font-size:11px;
-	text-align:center;
-	float:left;
-	padding:20px 20px 0px;
-}
-
-.account-button:hover{
-	background-color:$dark-orange;
-}
-
-.info-box-yellow{
-	box-shadow: 2px 2px 1px #E8E8E8;
-	background-color:white;
-	border:1px solid $light-grey;
-	border-top: 10px solid #F7F0BA;
-	width:250px;
-	padding:10px;
-	border-radius: 4px;
-	color:$text-grey;
-	line-height:16px;
-	font-size:11px;
-	margin-top:15px;
-	overflow:hidden;
-	h5{
-		color:$orange;
-	}
-	img {
-		max-width:100px;
-	}
-	a{
-
-	}
-}
-
-.info-box-light-teal{
-	box-shadow: 2px 2px 1px #E8E8E8;
-	background-color:white;
-	border:1px solid $light-grey;
-	border-top: 10px solid $light-teal;
-	width:250px;
-//	border:0px !important;
-	border-radius: 4px;
-	//background-color:$light-teal;
-	padding:10px;
-	margin-top:15px;
-	color:$text-grey;
-	line-height:16px;
-	font-size:12px;
-	overflow:hidden;
-	h5{
-		color:$aqua;
-	}
-	
-	a{
-		color:$aqua;
-	}
-	img {
-		max-width:100px;
-	}
-}
-
-.info-box-light-orange{
-	box-shadow: 2px 2px 1px #E8E8E8;
-	background-color:white;
-	width:250px;
-	//border-radius: 4px;
-	//background-color:#FCE9D5;
-	border:1px solid $light-grey;
-	border-top: 10px solid $orange;
-	padding:10px;
-	margin-top:15px;
-	color:$text-grey;
-	line-height:16px;
-	font-size:12px;
-	overflow:hidden;
-	h5{
-		color:$dark-red;
-	}
-	
-	a{
-		color:$dark-red;	
-	}
-	
-	img {
-		max-width:100px;
-	}
-}
-
 .sign-up-button{
-	min-width:99%;
 	padding: 3px 15px;
 	color:white;
 	border-radius: 4px;
@@ -258,53 +139,6 @@ input {
 .sign-up-button:hover, .sign-up-button:focus {
     background: $dark-green;
     text-decoration: none;
-}
-
-.menulogo{
-	img{
-		padding-top:17px;
-		width:97px;
-		height:29px;
-	}
-}
-
-.content-box{
-	text-align:center;
-	max-width: 1120px;
-	border:1px solid $light-grey;
-	border-top: 10px solid $light-teal;
-//	border:0px !important;
-	border-radius: 4px;
-	//background-color:$light-teal;
-	padding:10px;
-	margin-top:15px;
-	color:$text-grey;
-	line-height:16px;
-	font-size:12px;
-	h5{
-		color:$aqua;
-	}
-	img {
-		max-width:100px;
-	}
-}
-
-.info-box-full-yellow{
-	box-shadow: 2px 2px 1px #E8E8E8;	
-	background-color: #FCFAE6;
-	width:250px;
-	padding:10px;
-	border-radius: 4px;
-	line-height:16px;
-	font-size:11px;
-	margin-top:15px;
-	h5{
-		color:$orange;
-	}
-}
-
-.info-box-full-yellow:hover{
-	background-color:#F7F0BA;
 }
 
 
@@ -362,23 +196,6 @@ input {
 		}
 }
 
-
-.second-header{
-	font-size:12px;
-	color:$orange;
-	padding:8px;
-	background-color:#FEF4EA;
-	border-top:1px solid $dark-orange;
-	border-bottom:1px solid $orange;
-	margin-bottom:15px;
-}
-
-.btn{
-	i {
-		vertical-align: middle;
-	}
-}
-
 .home-bar-area{
     position: fixed;
     bottom: 93%;
@@ -395,35 +212,6 @@ input {
 	padding-bottom:150px;
 }
 
-
-.header-alert{
-	color:$dark-red;
-}
-
-.info-box-updates{
-	box-shadow: 2px 2px 1px #E8E8E8;
-	background-color:white;
-	border:1px solid $light-grey;
-	border-top: 10px solid $light-teal;
-//	border:0px !important;
-	border-radius: 4px;
-	//background-color:$light-teal;
-	padding:10px;
-	margin:40px 0px;
-	color:$text-grey;
-	line-height:16px;
-	font-size:12px;
-	h5{
-		color:$aqua;
-	}
-	
-	a{
-		color:$aqua;
-	}
-	img {
-		max-width:100px;
-	}
-}
 
 
 .grey-area{
@@ -447,16 +235,7 @@ input {
 	border:1px solid $background-grey;
 }
 
-.important-text{
-	font-size:16px;
-	color:$text-grey;
-	margin-bottom:25px;
-}
 
-.card-text{
-	font-size:13px;
-	line-height:19px;
-}
 
 .item-border{
 	border-bottom:1px solid $light-grey;
@@ -464,65 +243,4 @@ input {
 	padding:15px 0px;
 	margin:15px 0px;
 	
-}
-
-
-/*.overlay {
-	opacity : 0.4;
-	position: relative;
-	top: 0;
-	left: 0;
-	background-color: $orange;
-	width: '100%';
-	z-index:-1;
-}
-*/
-.ui-widget-overlay { 
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 100%; 
-    background: white;
-    opacity: 0.8;
-}
-
-.question-area{
-	padding:20px;
-	background-color:$background-grey;
-	border:4px solid $dark-grey;
-	border-radius:5px;
-}
-
-
-.card-image{
-	height:70px;
-	img{
-		max-height:70px;
-	}
-}
-
-.home-box{
-	height:200px;
-	box-shadow: 2px 2px 1px #E8E8E8;
-	background-color:white;
-	border:1px solid $light-grey;
-	border-top: 10px solid $orange;
-	width:250px;
-	padding:10px;
-	border-radius: 4px;
-	color:$text-grey;
-	line-height:16px;
-	font-size:13px;
-	margin-top:15px;
-	overflow:hidden;
-	h5{
-		color:$orange;
-	}
-	img {
-		max-width:100px;
-	}
-	a{
-
-	}
 }
