--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -1,10 +1,8 @@
-
 .container
 	.row-fluid
 		.span12
 			.row-fluid
-				.offset2.span8.white-background-signin
-						
+				.span12.white-background-signin	
 					.row-fluid
 						.span12
 							%h3 Create a DemPoints account
@@ -43,7 +41,7 @@
 								%h4 Create an account
 								%br
 								= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
-									= f.text_field :first_name, :placeholder => " First Name", :class => "focus_"
+									= f.text_field :username, :placeholder => "Username", :class => "focus_"
 									= f.email_field :email, :placeholder => " Email"
 									= f.password_field :password, :placeholder => " Password"
 									= f.hidden_field :role, :value => "student"
