--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,7 +23,7 @@ $light-green: #DBF2DE;
 
 
 $dark-red: #D41528;
-.row {min-width:100% !important;}
+
 
 /* ========= END SECTION: STYLE VARIABLES =========*/
 
@@ -106,7 +106,7 @@ html {
 		color:#9b9b9b;
 	}
 	a:hover{
-		color:$dark-grey;
+		color:white;
 	};
 
 }
@@ -126,102 +126,11 @@ textarea {
 }
 
 
-.sign-in-button{
-	font-size:23px;
-	font-weight:700;
-	color:$dark-grey;
-}
-
-.sign-in-button:hover{
-	text-decoration:none;
-	color:white;
-}
-
-.sign-up-button{
-	padding: 3px 15px;
-	color:white;
-	border-radius: 4px;
-	border:0px !important;
-	background-color:#54bb62;
-	height:40px;
-}
-
-.sign-up-button:hover, .sign-up-button:focus {
-    background: $dark-green;
-    text-decoration: none;
-}
-
-
-.signup-button{
-	font-size:15px;
-	padding:10px 100px;
-	border-top:1px solid $orange;
-	border-bottom:1px solid $orange;
-	margin:50px 0px;
-	font-weight:700;
-}
-
-.signup-button:hover{
-	background-color: $orange;
-	color:white;
-}
-
-.light-teal-message{
-	box-shadow: 2px 2px 1px #E8E8E8;
-		background-color:$light-teal;
-		width:250px;
-	//	border:0px !important;
-		border-radius: 4px;
-		//background-color:$light-teal;
-		padding:10px;
-		margin-top:15px;
-		color:$text-grey;
-		line-height:16px;
-		font-size:12px;
-		h5{
-			color:$aqua;
-		}
-		img {
-			max-width:100px;
-		}	
-}
-
-.light-blue-message{
-		box-shadow: 2px 2px 1px #E8E8E8;
-		background-color:#EBF8FC;
-		width:250px;
-	//	border:0px !important;
-		border-radius: 4px;
-		//background-color:$light-teal;
-		padding:10px;
-		margin-top:15px;
-		color:$text-grey;
-		line-height:16px;
-		font-size:12px;
-		h5{
-			color:#1580A3;
-		}
-		img {
-			max-width:100px;
-		}
-}
-
 .home-bar-area{
     position: fixed;
     bottom: 93%;
     right: 2%;
 }
-
-
-.signinbox-button:hover{
-    background: $dark-green;	
-}
-
-
-.about-bottom{
-	padding-bottom:150px;
-}
-
 
 
 .grey-area{
@@ -237,7 +146,9 @@ textarea {
 	border:1px solid $light-grey;
 }
 
-
+.homepage{
+	padding-top:90px;
+}
 .sign-in-area{
 	text-align:center;
 	padding:20px;
@@ -253,4 +164,8 @@ textarea {
 	padding:15px 0px;
 	margin:15px 0px;
 	
+}
+
+.button{
+	margin-bottom:-40px;
 }
