--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -1,3 +1,12 @@
-%h6 Latest bits of advice
-%hr
-=render 'layouts/feed_item'
+
+.large-8.columns
+	.row.negative-padding
+		.small-4.columns
+			%h6 Latest bits of advice
+		.small-8.columns
+			.text-right
+				= link_to "Add Advice", new_comment_path, :class => "button radius tiny"
+				= link_to "Ask Question", '#', :class =>"button radius tiny alert"
+	%hr
+	=render 'layouts/feed_item'
+.large-4.columns.text-right
