--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,4 @@
-
-	<div class="row-fluid">
+	<div class="large-8 columns">
 		<div class="span6">
 		<h3>Edit <%= resource_name.to_s.humanize %> Details</h3>
 		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
