--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 		
 		
 		<header id="sidebar"> 
-<%= render 'layouts/header'%>
+<%= render 'layouts/navbar'%>
 			</header>
 			<article id="contentWrapper"> 
 					<section id="content"> 
