styled the signed out pages

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,5 +1,6 @@
 .footer
 	%ul.inline-list
+		%li=link_to 'Dempoints', root_path
 		%li=link_to 'About', about_path
-		%li=link_to 'New Stuff', updates_path 
+		-# %li=link_to 'New Stuff', updates_path 
 		%li=link_to 'Sign In', new_user_session_path
