--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -1,53 +1,17 @@
-.container
-	.row-fluid
-		.span12
-			.row-fluid
-				.span12.white-background-signin	
-					.row-fluid
-						.span12
-							%h3 Create a DemPoints account
-							%hr
-							%br
-					.row-fluid
-						.span6.hidden-phone
-							.important-text
-								DemPoints is where you find, sort and use the best informal career advice given by students
-							.row-fluid
-								.span3
-									=image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/rocket_2.jpg', height: '60px', width: '60px')	
-								.span8
-									%b Get ahead faster
-									%br
-									Use knowledge from those who have made it 
-									
-									
-							.row-fluid.item-border
-								.span3
-									=image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/brain.jpg', height: '60px', width: '60px')
-								.span8
-									%b Apply for jobs smarter
-									%br
-									Access information that can help your applications and interviews
-									
-							.row-fluid
-								.span3
-									=image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/briefcase.jpg', height: '60px', width: '60px')
-								.span8
-									%b Know whats actually happening
-									%br
-									Judge companies on their own merits with first-hand information 							
-						.span6
-							.sign-in-area
-								%h4 Create an account
-								%br
-								= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
-									= f.text_field :username, :placeholder => "Username", :class => "focus_"
-									= f.email_field :email, :placeholder => " Email"
-									= f.password_field :password, :placeholder => " Password"
-									= f.hidden_field :role, :value => "student"
-									- if false
-										= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
-									%div= f.submit "Join", :class => "sign-up-button"
-								=link_to "Already have an account? Sign in", new_user_session_path
-							.errors
-								= devise_error_messages!
+.homepage
+	.row.pad-top
+		.large-6.large-offset-1.columns.copywrite
+			.sign-in-area
+				%h5.bold Create an account
+				= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
+					= f.text_field :username, :placeholder => "Username", :class => "focus_"
+					= f.email_field :email, :placeholder => " Email"
+					= f.password_field :password, :placeholder => " Password"
+					= f.hidden_field :role, :value => "student"
+					- if false
+						= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
+					%div= f.submit "Join", :class => "button success radius small"
+					%br
+				=link_to "Already have an account? Sign in", new_user_session_path
+				.errors
+				= devise_error_messages!
