--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -1,43 +1,11 @@
-.container.about
-	.row-fluid
-		.span6
-			%h3 About DemPoints
-	.row-fluid
-		.span8
-			.about-area
-				.about-text
-					%p(style="font-weight:bold") Founded by two UNSW students who held leadership positions at student societies, Dempoints is an online platform to read, create and share job advice by students for students. 
-					%br
-					%p Whether an engineer, a prospective lawyer, a future consultant or a marketer to-be, DemPoints is one reference point (of many) for you to help you find out what it really takes to enter these industries and give you a better idea of what you're aiming for.
-					%br
-					%p Our guiding principle with DemPoints is to give every student the opportunities we had when we applied for our internship & grad jobs.
-					%br
-				
-		.span4
-			.info-box-yellow
-				Number of Students
-				%br
-				%br
-				%h5 200+
-				%br
-
-			.info-box-light-teal
-				Companies with reputable graduate and internship jobs listed
-				%br
-				%br
-				%h5= Company.count
-				%br
-			.info-box-light-orange
-				Number of industries represented
-				%br
-				%br
-				%h5= Category.count
-				%br
-
-
-
-					
-			-#about-area
-- if !signed_in?
-	.about-bottom
-	
+.homepage
+	.row.pad-top
+		.large-6.large-offset-1.columns.copywrite
+			%h3.bold About DemPoints
+			Founded by two UNSW students who held leadership positions at student societies, Dempoints is an online platform to read, create and share job advice by students for students. 
+			%br
+			%br
+			Whether an engineer, a prospective lawyer, a future consultant or a marketer to-be, DemPoints is one reference point (of many) for you to help you find out what it really takes to enter these industries and give you a better idea of what you're aiming for.
+			%br
+			%br
+			Our guiding principle with DemPoints is to give every student the opportunities we had when we applied for our internship & grad jobs.
