--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -2,6 +2,7 @@ $(document).ready(function() {
 
 	//GET BROWSER WINDOW HEIGHT
 	var currHeight = $(window).height();
+	var currWidth = $('#content').width;
 	//SET HEIGHT OF SIDEBAR AND CONTENT ELEMENTS
 	$('#sidebar, #content').css('height', currHeight);
 
@@ -14,5 +15,25 @@ $(document).ready(function() {
 		$('#sidebar, #content').css('height', currHeight);
 
 	});
+
+	$('#navbar-control').click(function(){
+		$('#sidebar').animate({
+			width:80
+		})
+		$('#content').animate({
+			marginLeft:80
+		})
+	});
+	
+	$('#navbar-collapsed').click(function(){
+		$('#sidebar').animate({
+			width:220
+		})
+		$('#content').animate({
+			marginLeft:240
+		})
+	})
+
+
 
 });
