--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -14,23 +14,7 @@
 	= link_to current_user.username, edit_user_registration_path
 	%br
 	= link_to "Log Out", destroy_user_session_path,:method =>"DELETE"
-
-.hidden
-	#question
-		.question-area
-			%b Add a Question anonymously
-			%br
-			%br
-			=form_for @ask_question do |f|
-				= f.label :company, "Company"
-				= f.collection_select :company_id, Company.order(:name), :id, :name, {}, :id => "searchq" 
-				%br
-				%br
-				= f.label :category, "Topic"
-				= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name, {}, :id => "searchq2"
-				%br
-				%br
-				= f.label :question, "Question"
-				= f.text_area :question_content, :placeholder => "What is your question?"
-				= f.hidden_field :user_id, :value => current_user.id
-				= f.submit :class => "sign-up-button"
+	%br
+	= link_to "Collapse", '#', :id => "navbar-control", :remote => true
+	%br
+	= link_to "Expand", '#', :id => "navbar-collapsed", :remote => true
