--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,6 +65,7 @@ h2{
 .feed-subtext{
 	font-size:10px;
 }
+.row {min-width:100%;}
 
 /* ========= END SECTION: UNIVERSALS =========*/
 
@@ -88,7 +89,8 @@ html {
 }
 
 #content {
-	margin-left:240px;
+//	margin-left:220px;
+	padding-left:20px;
 	overflow-y: auto;
 }
 
