--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -20,11 +20,17 @@ $(document).ready(function() {
 		$('#sidebar').animate({
 			width:80
 		})
+		$('#content').animate({
+			marginLeft:80
+		})
 	});
 	
 	$('#navbar-collapsed').click(function(){
 		$('#sidebar').animate({
 			width:220
+		})
+		$('#content').animate({
+			marginLeft:220
 		})
 	})
 
