--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -1,5 +1,5 @@
 
-.large-8.columns
+.large-9.large-offset-1.columns
 	.row.negative-padding
 		.small-4.columns
 			%h6 Latest bits of advice
@@ -9,4 +9,3 @@
 				= link_to "Add Advice", new_comment_path, :class => "button radius tiny"
 	%hr
 	=render 'layouts/feed_item'
-.large-4.columns.text-right
