--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,6 +122,8 @@ html {
 	}
 }
 
+
+
 textarea {
     height: 300px;
 }
@@ -177,3 +179,11 @@ textarea {
 	line-height:30px;
 	color:$dark-grey;
 }
+
+.nav-item{
+	padding:10px 0px;
+	img{
+		
+	}
+}
+
