updated navbar icons

--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -4,7 +4,7 @@
 .navbar
 	
 	.nav-item
-		= link_to companies_path do
+		= link_to root_path do
 			=image_tag('star.png', height: '30', width: '30')
 			&nbsp
 			%span(class="navbar-text")Home
