--- a/app/views/layouts/_feed_item.haml
+++ b/app/views/layouts/_feed_item.haml
@@ -1,28 +1,16 @@
 -@comments.each do |comment|
 	- comment_company = comment.get_company_for_comment
 	
-	-if comment.id == 40
-		.row 
-			.large-12.columns
-				.center-alignment
-					%br
-					%br
-					%h3.bold How a Colombian internet address became the online home for startups
-					%br
-					%p In less than four years, more than 1.6 million individuals and businesses, mostly start-ups, have created a website with an address ending with .co. That is a staggering number for a new top-level domain (the last bit of a web address). Contrast that with .biz, which was introduced in 2000 and by April last year had chalked up just 2.4 million registrations.
-				=image_tag('https://a1.muscache.com/locations/uploads/city/hero/31/0_5250_174_2904_hero__DSC0819.jpg')
-		%hr
-	
 	.row
 		.small-2.columns
 			= link_to image_tag(comment_company.logo.url(:thumb)), comment_company			
 		.small-10.columns.feed-text
 			%b= comment.title
 			\-
-			=comment_company.name
+			=link_to comment_company.name, companies_path(comment_company)
 				
 			%br
-			= link_to comment.body, comment_company
+			= link_to comment.body, comment
 			.feed-subtext
 				= link_to raw("Thank author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small", :remote => true
 				- thanks = comment.upvotes.size 
@@ -30,5 +18,8 @@
 					%span[comment]
 						=thanks
 					have given thanks
+				
+				%br	
+				(There are 5 comments)
 	%hr
 
