--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -20,12 +20,11 @@
 		&nbsp
 		= link_to "Q&A", questions_path, :class => 'navbar-text'
 
-	.hidden
-		%li=link_to "Add Question", "#", :class => "btn btn-info", :id => "question-button", :remote => true
-	%br
-	-# link_to "New Stuff!", updates_path
-	-#%br
-	= link_to current_user.username, edit_user_registration_path
+	.nav-item
+		=image_tag('user.png', height: '30', width: '30')
+		&nbsp
+		-# link_to current_user.username, edit_user_registration_path, :class => 'navbar-text'
+		= link_to current_user.username, '#', :class => 'navbar-text', :remote => true, :id => "user-control"
 	%br
 	= link_to "Log Out", destroy_user_session_path,:method =>"DELETE"
 	%br
