--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -10,7 +10,7 @@
 			= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
 				= f.text_field :username, :placeholder => "Username", :class => "focus_"
 				= f.email_field :email, :placeholder => " Email"
-				= f.password_field :password, :placeholder => " Password"
+				= f.password_field :password, :placeholder => " Password  (6 or more characters)"
 				= f.hidden_field :role, :value => "student"
 				- if false
 					= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
