modified start state of user bar

--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -38,10 +38,10 @@ $(document).ready(function() {
 	
 	$('#user-control').click(function(){
 		 $('#insidebar').animate({
-			width:0
+			width:220
 		})
 		$('#content').animate({
-			marginLeft:parseInt($('#content').css('marginLeft'))-220
+			marginLeft:parseInt($('#content').css('marginLeft'))+220
 		})
 	})
 
