--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -24,7 +24,7 @@
 		=image_tag('user.png', height: '30', width: '30')
 		&nbsp
 		-# link_to current_user.username, edit_user_registration_path, :class => 'navbar-text'
-		= link_to current_user.username, '#', :class => 'navbar-text', :remote => true, :id => "user-control"
+		= link_to current_user.username, '#', :class => 'navbar-text user-closed', :remote => true, :id => "user-control"
 	%br
 	= link_to "Log Out", destroy_user_session_path,:method =>"DELETE"
 	%br
