--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -20,11 +20,13 @@
 		&nbsp
 		= link_to "Q&A", questions_path, :class => 'navbar-text'
 
-	.nav-item
-		=image_tag('user.png', height: '30', width: '30')
-		&nbsp
-		-# link_to current_user.username, edit_user_registration_path, :class => 'navbar-text'
-		= link_to current_user.username, '#', :class => 'navbar-text user-closed', :remote => true, :id => "user-control"
+	.nav-item#user-control
+		=link_to('#', :remote => true)  do 
+			=image_tag('user.png', height: '30', width: '30')
+			&nbsp
+			%span(class="navbar-text")= current_user.username
+			-# link_to current_user.username, edit_user_registration_path, :class => 'navbar-text'
+			-# link_to current_user.username, '#', :class => 'navbar-text user-closed', :remote => true, :id => "user-control"
 	%br
 	= link_to "Log Out", destroy_user_session_path,:method =>"DELETE"
 	%br
