--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 		</header>
 		
 		<section id="insidebar">
-			hello world
+			<%= render 'layouts/insidebar'%>
 		</section>
 		
 		<article id="contentWrapper"> 
