--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -3,6 +3,7 @@ $(document).ready(function() {
 	//GET BROWSER WINDOW HEIGHT
 	var currHeight = $(window).height();
 	var clickedUser = false;
+	var collapsedNav = false;
 	//var currWidth = $('#content').width;
 	//SET HEIGHT OF SIDEBAR AND CONTENT ELEMENTS
 	$('#sidebar, #content, #insidebar').css('height', currHeight);
@@ -17,24 +18,48 @@ $(document).ready(function() {
 
 	});
 
-	$('#navbar-control').click(function(){
+	$('#navbar-expand').click(function(){
 		$('#sidebar').animate({
 			width:90
 		})
 		$('#content').animate({
-			marginLeft:90
+			marginLeft:parseInt($('#content').css('marginLeft'))-130
+		})
+		$('#insidebar').animate({
+			marginLeft:parseInt($('#insidebar').css('marginLeft'))-130
 		})
 		$('.navbar-text').hide()
+		$(this).hide()
+		$('#navbar-collapsed').show()
+		$('.nav-collapse').animate({
+			width:parseInt($('.nav-collapse').css('width'))-130
+		})
+		collapsedNav = true;
+		$(this).hide
 	});
 
 	$('#navbar-collapsed').click(function(){
 		$('#sidebar').animate({
 			width:220
 		})
-		$('#content').animate({
-			marginLeft:220
+		if(clickedUser==false){
+			$('#content').animate({	
+				marginLeft:220
+			})
+		} else {
+			$('#content').animate({
+				marginLeft:parseInt($('#content').css('marginLeft'))+130
+			})
+		}
+		$('#insidebar').animate({
+			marginLeft:parseInt($('#insidebar').css('marginLeft'))+130
 		})
 		$('.navbar-text').delay(250).show(150)
+		$(this).hide()
+		$('#navbar-expand').show()
+		$('.nav-collapse').animate({
+			width:parseInt($('.nav-collapse').css('width'))+130
+		})
 	})
 
 	$('#user-control').click(function(){
@@ -55,6 +80,7 @@ $(document).ready(function() {
 			})
 			clickedUser=false;
 		}
+
 	})
 
 
