--- a/app/views/layouts/_navbar.haml
+++ b/app/views/layouts/_navbar.haml
@@ -25,7 +25,7 @@
 		=link_to('#', :remote => true)  do 
 			=image_tag('user.png', height: '30', width: '30')
 			&nbsp
-			%span(class="navbar-text")= current_user.username
+			%span(class="navbar-text")= current_user.displayname
 			-# link_to current_user.username, edit_user_registration_path, :class => 'navbar-text'
 			-# link_to current_user.username, '#', :class => 'navbar-text user-closed', :remote => true, :id => "user-control"
 
