--- a/app/views/questions/index.haml
+++ b/app/views/questions/index.haml
@@ -1,4 +1,4 @@
-.large-8.columns
+.large-9.large-offset-1.columns
 	%h4.bold Open Questions
 	%h5 Here you can ask questions about the companies you want to know about anonymously
 	%br
