changed the new comment form to reflect title structure

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -202,11 +202,19 @@ textarea {
 	border:1px solid $light-grey;
 	padding:15px;
 	line-height:20px;
-	font-size:13px !important;
+	p{font-size:13px !important;}
+
+
+}
+
+.discussion-form{
+	textarea{
+		height:100px !important;
+	}
 }
 
 .original{
-
+	background-color:$light-grey
 }
 
 .discussion-subarea{
