relinked the feed item to the company's actual page

--- a/app/views/layouts/_feed_item.haml
+++ b/app/views/layouts/_feed_item.haml
@@ -7,7 +7,7 @@
 		.small-10.columns.feed-text
 			%b= comment.title
 			\-
-			=link_to comment_company.name, companies_path(comment_company)
+			=link_to comment_company.name, comment_company
 				
 			%br
 			= comment.body
