slight styling changes to companies index

--- a/app/views/companies/index.haml
+++ b/app/views/companies/index.haml
@@ -11,6 +11,6 @@
 		.company-box
 			=link_to (company) do
 				= image_tag(company.logo.url(:thumb))
+				&nbsp &nbsp 
 				= company.name
-				= company.industry
 			%hr
