--- a/app/views/companies/index.haml
+++ b/app/views/companies/index.haml
@@ -2,10 +2,16 @@
 	%script
 		$(document).ready(function() { $("#search").select2({  width: 'resolve', placeholder: "Sort by industry" });});
 
-	.row-fluid
-		.span6
+	%h4.bold List of Companies
+	%br
+	%br
+	.row
+		.small-3.columns
+			%h5 Filter by industry:
+		.small-9.columns
 			= form_tag companies_path, :method => 'get' do
-				= select_tag :industry_id, options_from_collection_for_select(Industry.all, "id", "industry"), include_blank: true, :onchange => "this.form.submit()", :id => "search"
+				= select_tag(:industry_id, options_from_collection_for_select(Industry.all, "id", "industry"), include_blank: true, :onchange => "this.form.submit()", :id => "search")
+	%hr
 	
 	- @company.each do |company|
 		.company-box
